Added the swipe animation from login to sign up + fixed the links and made the loading animation not always shown (only when files are loaded)

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <body>
     <div class="loading" id="loading" style="background-color: #fbfbfb;">
-        <div style="width:500px;margin:auto;vertical-align:middle;margin-top:25vh;">
-            <img src="./assets/loading2.gif" style="width:100%;display:block;margin:auto">
+        <div style="width:100%px;max-width: 500px;margin:auto;vertical-align:middle;margin-top:25vh;object-fit: cover;">
+            <img src="./assets/Loadingscreen.gif" style="width:100%;display:block;margin:auto">
         </div>
     </div>
     <span id="circle" class="circle"></span>
@@ -39,28 +39,28 @@
                         </g>
                     </svg>
                         </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse" id="collapsibleNavbar2">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link linker" href="https://insat.acm.org/#about">ABOUT US</a>
+                            <a class="nav-link linker2" id="do" href="./index.html#about">ABOUT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker" href="https://insat.acm.org/#posts">POSTS</a>
+                            <a class="nav-link linker2" href="./index.html#posts">POSTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker" href="https://insat.acm.org/#activities">ACTIVITIES</a>
+                            <a class="nav-link linker2" href="./index.html#activities">ACTIVITIES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker" href="https://insat.acm.org/#contests">CONTESTS</a>
+                            <a class="nav-link linker2" href="./index.html#contests">CONTESTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker" href="https://insat.acm.org/#team">TEAM</a>
+                            <a class="nav-link linker2" href="./index.html#team">TEAM</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" style="background-color: #039AD7;" href="https://insat.acm.org/login">LOGIN</a>
+                            <a class="nav-link btn" style="background-color: #039AD7" href="./signin.html">LOGIN</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" style="background-color: #78C4DE;" href="https://insat.acm.org/signup">SIGN UP</a>
+                            <a class="nav-link btn" style="background-color: #78C4DE" href="./signin.html#signup">SIGN UP</a>
                         </li>
                     </ul>
                 </div>
@@ -83,25 +83,25 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar2">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link linker2" id="do" href="https://insat.acm.org/#about">ABOUT US</a>
+                            <a class="nav-link linker2" id="do" href="./index.html#about">ABOUT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker2" href="https://insat.acm.org/#posts">POSTS</a>
+                            <a class="nav-link linker2" href="./index.html#posts">POSTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker2" href="https://insat.acm.org/#activities">ACTIVITIES</a>
+                            <a class="nav-link linker2" href="./index.html#activities">ACTIVITIES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker2" href="https://insat.acm.org/#contests">CONTESTS</a>
+                            <a class="nav-link linker2" href="./index.html#contests">CONTESTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link linker2" href="https://insat.acm.org/#team">TEAM</a>
+                            <a class="nav-link linker2" href="./index.html#team">TEAM</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" style="background-color: #039AD7" href="https://insat.acm.org/login">LOGIN</a>
+                            <a class="nav-link btn" style="background-color: #039AD7" href="./signin.html">LOGIN</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" style="background-color: #78C4DE" href="https://insat.acm.org/signup">SIGN UP</a>
+                            <a class="nav-link btn" style="background-color: #78C4DE" href="./signin.html#signup">SIGN UP</a>
                         </li>
                     </ul>
                 </div>
