--- a/signin.html
+++ b/signin.html
@@ -268,9 +268,9 @@
     <div class="login-card">
         <div class="card-container" style="float:left;" id="tobeshown">
             <div class="d-flex justify-content-center">
-                <img style="width: 200px;" src="./assets/signin.png" id="bounce">
+                <img style="width: 300px;" src="./assets/signin.png" id="bounce">
             </div>
-            <div class="input" style="z-index:11;display:block;">
+            <div class="input" style="z-index:11;display:block;margin-top:50px">
                 <input style="z-index:11;width:100%;" class="form" name="uname" placeholder="Username" type="text">
                 <input style="z-index:11;width:100%;" class="form" name="password" placeholder="Password" type="password">
                 <button style="z-index:11;" class="login_btn" value="Log In" name="login_btn">Login</button>
@@ -280,6 +280,9 @@
                     <a href="https://insat.acm.org/resendconfirm">Resend confirmation E-mail.</a><br>
                     <a href="https://insat.acm.org/password_resetting">Forgot your password ?</a></p>
             </div>
+            <p class="d-flex" style="margin-left:40px;" style="font-family: MyriadProRegular;">Check membership benefits
+                <a href="https://insat.acm.org/posts/Chapter-membership-benefits" target="_blank" class="lnr lnr-arrow-right-circle swing" style="margin: 0px 0px 0px 10px;font-size: 25px;color: #13659A;font-weight: 600;"></a>
+            </p>
             <div class="foot">
 
             </div>
@@ -287,38 +290,42 @@
         </div>
         <div class="card-container" style="float:left;" id="tobeshown2">
             <div class="d-flex justify-content-center">
-                <img style="width: 200px;" src="./assets/signup.png" id="bounce">
+                <img style="width: 220px;" src="./assets/signup.png" id="bounce">
             </div>
-            <div class="input" style="z-index:11;position: flex;margin-top:10px;">
-                <input style="z-index:11;" class="form" name="uname" placeholder="Username" type="text">
-                <input style="z-index:11;" class="form" name="uemail" placeholder="Email" type="text">
-                <input style="z-index:11;" class="form" name="fname" placeholder="Firstname" type="text">
-                <input style="z-index:11;" class="form" name="lname" placeholder="Lastname" type="text">
-                <input style="z-index:11;" class="form" name="password" placeholder="Password" type="password">
-                <input style="z-index:11;" class="form" name="cpassword" placeholder="Confirm Password" type="password">
+            <div class="input" style="z-index:11;position: flex;margin-top:20px;">
+                <input style="z-index:11;width:38%" class="form" name="uname" placeholder="Username" type="text">
+                <input style="z-index:11;width:60%" class="form" name="uemail" placeholder="Email" type="text">
+                <input style="z-index:11;width:49%" class="form" name="fname" placeholder="Firstname" type="text">
+                <input style="z-index:11;width:49%" class="form" name="lname" placeholder="Lastname" type="text">
+                <input style="z-index:11;width:49%" class="form" name="password" placeholder="Password" type="password">
+                <input style="z-index:11;width:49%" class="form" name="cpassword" placeholder="Confirm Password" type="password">
                 <select class="form" name="registration[occupation]" class="widget form-control"><option value="Student">university/college Student</option><option value="Highschool Student">Highschool Student</option><option value="Professional">Professional</option></select>
                 <input style="z-index:11;" class="form" name="estab" placeholder="Establishement" type="text">
                 </br>
                 <button style="z-index:11;" class="login_btn" value="Log In" name="login_btn" id="logg">Sign In</button>
             </div>
+
             <div class="col-12" style="z-index:11;margin-top:-10px" id="tobeshownn">
                 <p>Already have an account? <a href="#" id="loggg">Sign In</a><br>
             </div>
+            <p class="d-flex" style="margin-left:40px;" style="font-family: MyriadProRegular;">Check membership benefits
+                <a href="https://insat.acm.org/posts/Chapter-membership-benefits" target="_blank" class="lnr lnr-arrow-right-circle swing" style="margin: 0px 0px 0px 10px;font-size: 25px;color: #13659A;font-weight: 600;"></a>
+            </p>
             <div class="foot">
 
             </div>
 
         </div>
         <div class="card-container" id="tobehidden" style="top:0px;transform: translateX(150%);background-image:url('./assets/blue_background.jpeg');width:40%;">
-            <div class="content" style="margin-top:130px;padding:10px;position: absolute;right:0px;" id="tobeshownnn2">
-                <h1 id="titl" style="font-size:42;font-family: 'Open Sans',sans-serif;color:white;font-weight: 800;">Welcome Back !</h1>
-                <p id="parg">To keep being connected with us please enter your information</p>
+            <div class="content" style="margin-top:200px;padding:10px;position: absolute;right:0px;" id="tobeshownnn2">
+                <h1 class="titl" style="font-size:42;font-family: 'Open Sans',sans-serif;color:white;font-weight: 800;">Welcome Back !</h1>
+                <p class="parg">To keep being connected with us please enter your information</p>
                 </br>
 
             </div>
-            <div class="content" style="margin-top:130px;padding:10px;position: absolute;right:0px;" id="tobeshownnn">
-                <h1 id="titl" style="font-size:42;font-family: 'Open Sans',sans-serif;color:white;font-weight: 800;">Hi Friend !</h1>
-                <p id="parg">To Join us please fill this form</p>
+            <div class="content" style="margin-top:150px;padding:10px;position: absolute;right:0px;" id="tobeshownnn">
+                <h1 class="titl" style="font-size:42;font-family: 'Open Sans',sans-serif;color:white;font-weight: 800;">Hi Friend !</h1>
+                <p class="parg">To Join us please fill this form</p>
                 </br>
                 <div>
                     <p>In case u already have an account : </p>
