Added the membership benefits , resend confirmation email and reset password platform

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         <path id="path" style="stroke:none;fill-rule:nonzero;fill-opacity:1;" d="M 0 12 L 0 24 L 144 24 L 144 12 Z M 0 66 L 0 78 L 144 78 L 144 66 Z M 0 120 L 0 132 L 144 132 L 144 120 Z M 0 120 "/>
                         </g>
                     </svg>
-                        </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar2">
+                            </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link linker2" id="do" href="./index.html#about">ABOUT US</a>
@@ -60,12 +60,11 @@
                             <a class="nav-link btn" style="background-color: #039AD7" href="./signin.html">LOGIN</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" style="background-color: #78C4DE" href="./signin.html#signup">SIGN UP</a>
+                            <a class="nav-link btn" id="singup" style="background-color: #78C4DE" href="./signup.html">SIGN UP</a>
                         </li>
                     </ul>
                 </div>
             </div>
-        </div>
     </header>
     <header>
         <div class="navbar navbar-expand-md menu fixed-top" id="men2" style="border:0px;position:fixed;top:0;background-color:#13659A;z-index:1">
@@ -79,7 +78,7 @@
                         <path id="path" style=" fill:white;stroke:none;fill-rule:nonzero;fill-opacity:1;" d="M 0 12 L 0 24 L 144 24 L 144 12 Z M 0 66 L 0 78 L 144 78 L 144 66 Z M 0 120 L 0 132 L 144 132 L 144 120 Z M 0 120 "/>
                         </g>
                     </svg>
-                        </button>
+                            </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar2">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -100,8 +99,8 @@
                         <li class="nav-item">
                             <a class="nav-link btn" style="background-color: #039AD7" href="./signin.html">LOGIN</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link btn" style="background-color: #78C4DE" href="./signin.html#signup">SIGN UP</a>
+                        <li class="nav-item" id="singup">
+                            <a class="nav-link btn" style="background-color: #78C4DE" href="./signup.html">SIGN UP</a>
                         </li>
                     </ul>
                 </div>
@@ -210,7 +209,7 @@
                 <div class="row">
                     <div class="col">
                         <p class="d-flex justify-content-end" style="font-family: MyriadProSemiBold;">Check membership benefits
-                            <a href="https://insat.acm.org/posts/Chapter-membership-benefits" target="_blank" class="lnr lnr-arrow-right-circle swing" style="margin: 0px 0px 0px 10px;font-size: 25px;color: #13659A;font-weight: 600;"></a>
+                            <a href="./Chapter-membership-benefits.html" target="_blank" class="lnr lnr-arrow-right-circle swing" style="margin: 0px 0px 0px 10px;font-size: 25px;color: #13659A;font-weight: 600;"></a>
                         </p>
 
                     </div>
