--- a/resendconfirm.html
+++ b/resendconfirm.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sign In</title>
+    <title>Resend Email</title>
     <link rel="icon" href="https://insat.acm.org/img/logo.png">
     <link rel="stylesheet" href="./style/bootstrap.css">
     <link rel="stylesheet" href="./style/main1.css">
@@ -265,80 +265,22 @@
 
     </footer>
     -->
-    <div class="login-card">
-        <div class="card-container" style="float:left;" id="tobeshown">
+    <div class="login-card" style="max-width:500px;max-height: 400px;">
+        <div class="card-container" style="width:100%">
             <div class="d-flex justify-content-center">
-                <img style="width: 300px;" src="./assets/signin.png" id="bounce">
+                <img style="width: 300px;" src="./assets/resendconfirm.png" id="bounce">
             </div>
             <div class="input" style="z-index:11;display:block;margin-top:50px">
-                <input style="z-index:11;width:100%;" class="form" name="uname" placeholder="Username" type="text">
-                <input style="z-index:11;width:100%;" class="form" name="password" placeholder="Password" type="password">
-                <button style="z-index:11;" class="login_btn" value="Log In" name="login_btn">Login</button>
+                <input style="z-index:11;width:100%;" class="form" name="uemail" placeholder="Username/Email" type="text">
+                <button style="z-index:11;width:200px" class="login_btn" value="Log In" name="login_btn">Resend Email</button>
             </div>
-            <div class="col-12" style="z-index:11;">
-                <p>You don't have an account? <a href="#signup" id="logg">Sign up</a> for FREE!<br>
-                    <a href="./resendconfirm.html">Resend confirmation E-mail.</a><br>
-                    <a href="./resetpass.html">Forgot your password ?</a></p>
-            </div>
-            <p class="d-flex" style="margin-left:40px;" style="font-family: MyriadProRegular;">Check membership benefits
-                <a href="./Chapter-membership-benefits.html" target="_blank" class="lnr lnr-arrow-right-circle swing" style="margin: 0px 0px 0px 10px;font-size: 25px;color: #13659A;font-weight: 600;"></a>
-            </p>
             <div class="foot">
 
             </div>
-
         </div>
-        <div class="card-container" style="float:left;" id="tobeshown2">
-            <div class="d-flex justify-content-center">
-                <img style="width: 220px;" src="./assets/signup.png" id="bounce">
-            </div>
-            <div class="input" style="z-index:11;position: flex;margin-top:20px;">
-                <input style="z-index:11;width:38%" class="form" name="uname" placeholder="Username" type="text">
-                <input style="z-index:11;width:60%" class="form" name="uemail" placeholder="Email" type="text">
-                <input style="z-index:11;width:49%" class="form" name="fname" placeholder="Firstname" type="text">
-                <input style="z-index:11;width:49%" class="form" name="lname" placeholder="Lastname" type="text">
-                <input style="z-index:11;width:49%" class="form" name="password" placeholder="Password" type="password">
-                <input style="z-index:11;width:49%" class="form" name="cpassword" placeholder="Confirm Password" type="password">
-                <select class="form" name="registration[occupation]" class="widget form-control"><option value="Student">university/college Student</option><option value="Highschool Student">Highschool Student</option><option value="Professional">Professional</option></select>
-                <input style="z-index:11;" class="form" name="estab" placeholder="Establishement" type="text">
-                </br>
-                <button style="z-index:11;" class="login_btn" value="Log In" name="login_btn" id="logg">Sign In</button>
-            </div>
-
-            <div class="col-12" style="z-index:11;margin-top:-10px" id="tobeshownn">
-                <p>Already have an account? <a href="#" id="loggg">Sign In</a><br>
-            </div>
-            <p class="d-flex" style="margin-left:40px;" style="font-family: MyriadProRegular;">Check membership benefits
-                <a href="./Chapter-membership-benefits.html" target="_blank" class="lnr lnr-arrow-right-circle swing" style="margin: 0px 0px 0px 10px;font-size: 25px;color: #13659A;font-weight: 600;"></a>
-            </p>
-            <div class="foot">
-
-            </div>
-
-        </div>
-        <div class="card-container" id="tobehidden" style="top:0px;transform: translateX(150%);background-image:url('./assets/blue_background.jpeg');width:40%;">
-            <div class="content" style="margin-top:200px;padding:10px;position: absolute;right:0px;" id="tobeshownnn2">
-                <h1 class="titl" style="font-size:42;font-family: 'Open Sans',sans-serif;color:white;font-weight: 800;">Welcome Back !</h1>
-                <p class="parg">To keep being connected with us please enter your information</p>
-                </br>
-
-            </div>
-            <div class="content" style="margin-top:150px;padding:10px;position: absolute;right:0px;" id="tobeshownnn">
-                <h1 class="titl" style="font-size:42;font-family: 'Open Sans',sans-serif;color:white;font-weight: 800;">Hi Friend !</h1>
-                <p class="parg">To Join us please fill this form</p>
-                </br>
-                <div>
-                    <p>In case u already have an account : </p>
-                    <a href="#"><button style="z-index:11;" class="login_btn2" id="logggg">Login</button></a>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-    <script src="./js/jquery-2.1.3.min.js.télécharger "></script>
-    <script src="./js/bootstrap.min.js.télécharger "></script>
-    <script src="./js/main1.js "></script>
+        <script src="./js/jquery-2.1.3.min.js.télécharger "></script>
+        <script src="./js/bootstrap.min.js.télécharger "></script>
+        <script src="./js/main1.js "></script>
 
 
 </body>
