added background color to the group section in profile page

--- a/profile.html
+++ b/profile.html
@@ -143,14 +143,14 @@
                     <h1 style="font-family: 'Open Sans',sans-serif;">Membership Information</h1>
                     <input style="z-index:11;width:100%; " class="form " name="memb" placeholder="Membership " type="text " readonly>
                     <input style="z-index:11;width:100%; " class="form " name="pay" placeholder="Payement " type="text " readonly>
-                    <div style="margin-top: 10px;padding: 10px 0px 10px 16px;border-radius: 15px; ">
+                    <div style="width:250px;margin:auto;background-color:rgb(226, 224, 224);margin-top: 10px;padding: 10px 0px 10px 16px;border-radius: 15px; ">
                         <a style="color: #838383;font-family: MyriadProRegular; " target="_blank " href="https://www.facebook.com/groups/225480037919735/ ">Community Group<i style="font-size: 22px;margin-left: 8px;color: #78c4de; " class="fas fa-chevron-circle-right
                                 swing "></i></a>
                         <br><a style="color: #838383;font-family: MyriadProRegular; " target="_blank " href="https://www.facebook.com/groups/acm20192020/ ">Members Group<i style="font-size: 22px;margin-left: 8px;color: #78c4de; " class="fas fa-chevron-circle-right
                                 swing "></i></a>
 
                     </div>
-                    <p class="d-flex" style="margin-left:60px;margin-bottom:30px" style="font-family: MyriadProRegular;">Check membership benefits
+                    <p class="d-flex" style="margin-left:20%;margin-bottom:30px;margin-top:20px" style="font-family: MyriadProRegular;">Check membership benefits
                         <a href="./Chapter-membership-benefits.html" target="_blank" class="lnr lnr-arrow-right-circle swing" style="margin: 0px 0px 0px 10px;font-size: 25px;color: #13659A;font-weight: 600;"></a>
                     </p>
 
